--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,23 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
+@fonts: 18px e('/') 1.5 'Open Sans', Arial, Helvetica, sans-serif;
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font: @fonts;
+}
+
+h1 {
+  font-size: 200%;
+}
+
+h2 {
+  font-size: 180%;
+}
+
+h3 {
+  font-size: 150%;
+}
+
+h4 {
+  font-size: 130%;
 }
