Added font-awesome for icon support. Added icons to the buttons.

--- a/src/App.less
+++ b/src/App.less
@@ -101,6 +101,10 @@ body {
   cursor: hand;
   .transition(background-color 0.5s ease);
 
+  i {
+    margin-right: @spacing/2;
+  }
+
   &:hover {
     background-color: @color-background;
   }
