Added the quill editor for comment editing and worked on button functionality.

--- a/src/App.less
+++ b/src/App.less
@@ -88,6 +88,14 @@ body {
   .OuterComment {
     border: 1px solid @color-comment * .6;
   }
+
+  .HideToolbar {
+    .Content {
+      .Toolbar {
+        display: none;
+      }
+    }
+  }
 }
 
 .Button {
