Fixed a bug with nest levels. Fixed the styling of code blocks in comments. Moved the reply button from the top comment to below the most recent subcomment to facilitate easier discussion for users.

--- a/src/App.less
+++ b/src/App.less
@@ -108,6 +108,9 @@ body {
 
       .ql-editor {
         font: @fonts;
+        pre {
+          background-color: @color-comment * .8;
+        }
       }
 
       .ql-container .ql-editor {
