--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,6 @@
 @fonts: 18px e('/') 1.5 'Open Sans', Arial, Helvetica, sans-serif;
 @spacing: 10px;
+@profilepic_size: 64px;
 
 @color-background: #8d9799;
 @color-comment: #eee;
@@ -61,11 +62,11 @@ body {
 
     .Side {
       float: left;
-      width: 64px;
-      padding-right: 20px;
+      width: @profilepic_size;
+      padding-right: @spacing * 2;
 
-      img {
-        width: 64px;
+      img, .Filler {
+        width: @profilepic_size;
       }
     }
 
