Fixed bug with extremely long words causing the comment to expand past its parent's bounds.

--- a/src/App.less
+++ b/src/App.less
@@ -73,6 +73,7 @@ body {
     .Content {
       float: left;
       flex-grow: 1;
+      overflow: auto;
 
       .User {
         color: @color-primary;
